[package]
name = "casl"
version = "0.1.0"
authors = ["NGnius <ngniusness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# json parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# audio libs
deepspeech = { version = "0.9.0" }
cpal = { version = "0.13.1" }

# misc (utilities)
ctrlc = { version = "" }
regex = { version = "" }
